# Sentinel

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  fairness-gate.yml
data/processed/: offenders.parquet
db/: init.sql
docs/: api_contract.md  deployment.md
domain_packs/criminal_justice/: fairness.py  features.py  model_config.yaml  schema.yaml  ui_config.json
domain_packs/criminal_justice/rag_sources/: fairness_and_overrides.md  risk_assessment_principles.md  supervision_levels.md  what_the_model_uses.md
fairness/: audit.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx  tokens.css
frontend/src/components/: AuthShell.jsx  Layout.jsx  PageBits.jsx  ProtectedRoute.jsx  ui.jsx
frontend/src/hooks/: useApi.js  useAuth.jsx
frontend/src/lib/: api.js  mockData.js
frontend/src/pages/: AuditTrail.jsx  CaseReview.jsx  CohortExplorer.jsx  DatasetView.jsx  FairnessMonitor.jsx  Login.jsx  ModelPerformance.jsx  RagAssistant.jsx  Signup.jsx
models/: fairness.json  metrics.json  model.pkl  pipeline.pkl  schema.json
notebooks/: 01_train_on_colab.ipynb
pipelines/: data_prep.py  graph_build.py  train.py
services/agent/: Dockerfile  requirements.txt
services/agent/app/: agent.py  config.py  hybrid.py  llm.py  main.py  middleware.py  retriever.py  schemas.py  tools.py
services/graph/: Dockerfile  requirements.txt
services/graph/app/: config.py  graph.py  main.py  schemas.py
services/predict/: Dockerfile  requirements.txt
services/predict/app/: artifacts.py  auth.py  config.py  dataset.py  db.py  demo_data.py  main.py  middleware.py  pipeline.py  schemas.py
(+1 files in other folders)
